--- a/index.html
+++ b/index.html
@@ -211,6 +211,22 @@
               </a>
             </li>
           </li>
+          <li class="nav-item">
+            <a href="point_member.html" class="nav-link">
+              <i class="far fa-circle nav-icon"></i>
+              <p>
+                Point Member
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="point_member.html" class="nav-link">
+              <i class="far fa-circle nav-icon"></i>
+              <p>
+                Input Member
+              </p>
+            </a>
+          </li>
             <ul class="nav nav-treeview">
               <li class="nav-item">
                 <a href="pages/layout/top-nav.html" class="nav-link">
@@ -309,7 +325,7 @@
     load_data();
     function load_data(search){
       $.ajax({
-        url:"Get_data.php",
+        url:"Get_data_list.php",
         method:"POST",
         data: {
           search: search
